classDiagram
    class User {
        +int id
        +str username
        +str password
        +str email
        +__str__()
        +to_dict() : dict
    }

    class HistorialTapat {
        +date data
        +time hora
        +str estat
        +int totalHores
        +__str__()
        +to_dict() : dict
    }

    class LlistaHistorial {
        +list historial
        +afegirHistorial(historial: HistorialTapat)
        +eliminarHistorial(data: date)
        +buscarHistorial(data: date) : HistorialTapat
        +to_dict() : list
    }

    class Nen {
        +int id
        +str child_name
        +int sleep_average
        +int treatment_id
        +int time
        +str informacioMedica
        +LlistaHistorial historialTapat
        +__str__()
        +to_dict() : dict
    }

    class Tap {
        +int id
        +int child_id
        +int status_id
        +int user_id
        +str init
        +str end
        +__str__()
        +to_dict() : dict
    }

    class Role {
        +int id
        +str type_rol
        +__str__()
        +to_dict() : dict
    }

    class Status {
        +int id
        +str name
        +__str__()
        +to_dict() : dict
    }

    class Treatment {
        +int id
        +str name
        +__str__()
        +to_dict() : dict
    }

    User --> Role : has
    Nen --> LlistaHistorial : has
    Nen --> Treatment : has
    Tap --> Status : has
    Tap --> User : has
    Tap --> Nen : has
    LlistaHistorial --> HistorialTapat : contains
    Role --> User : assigned to
    Status --> Tap : used by
    Treatment --> Nen : assigned to

